--- a/docs/developing/develop-index.asciidoc
+++ b/docs/developing/develop-index.asciidoc
@@ -15,6 +15,8 @@
 
 - link:/docs/developing/rt-kernel-config[The actual kernel config to use as a start for rt-preempt kernel]
 
+- link:/docs/hal/threads-and-latency[Advanced threads management with cgroups to optimise latency]
+
 - link:/docs/developing/writing-components[General info and links re writing components]
 
 - link:/docs/hal/instcomp_writing_a_component[Tutorial on writing an instantiated component with instcomp]
