Initial getting started guide

--- a/docs/getting-started/machinekit-images.asciidoc
+++ b/docs/getting-started/machinekit-images.asciidoc
@@ -30,3 +30,14 @@ https://groups.google.com/forum/#!forum/machinekit
 
 Instructions on writing a microSD card link:https://encrypted.google.com/search?q=beaglebone+black+flashing+SD+card[can be found here] by doing a Google search. There are plenty examples and tutorials
 around also for writing the image to the eMMC.
+
+= DEx(x) Debian Mksocfpga Images
+
+There are pre-built (debian Stretch) sd-card images to get started with Machinekit on the
+SocFPGA based DE0_Nano_SoC, DE10_Nano and the DE1_SoC boards from Terasic
+
+All boards can run fine on both types of sd-card images, however if you want to use a display
+the desktop image is setup to work out of the box with a hdmi 1920x1080 display (DE10_Nano only).
+As long as you follow all the initial setup steps.
+
+- link:/docs/getting-started/u-boot-mksocfpga-altera-initial[DEx(x) Initial Setup Steps]
