--- a/docs/getting-started/u-boot-mksocfpga-altera-initial.asciidoc
+++ b/docs/getting-started/u-boot-mksocfpga-altera-initial.asciidoc
@@ -71,21 +71,9 @@ fpgaload_on_boot=0
 => reset
 ----
 
-* Next from any linux console install the (Altera/Intel socfpga related) bitfiles:
+* Then from any linux console:
 
-[source,bash]
-----
-sudo apt update
-sudo apt install socfpga-rbf
-----
-* Then you are all set to install Machinekit
-
-[source,bash]
-----
-sudo apt update
-sudo apt install machinekit-rt-preempt
-----
-On your initial boot its recomended to update the distribuation by doing
+On your initial boot its recomended to update the linux distribuation by doing
 
 [source,bash]
 ----
@@ -93,16 +81,30 @@ sudo apt update
 sudo apt upgrade
 ----
 
----
-
-
-Lastly: +
-lib5-dev does'nt get installed properly by the image builder, this gives errors if anything tries to build a file, solution:
+Bugfix: +
+lib5-dev does'nt get installed properly by the image builder, this gives errors if anything tries to build software, solution:
 
 [source,bash]
 ----
 sudo apt install --reinstall libc6-dev
 ----
+
+* Next install the (Altera/Intel socfpga related) bitfiles:
+
+[source,bash]
+----
+sudo apt install socfpga-rbf
+----
+
+* Then you are all set to install Machinekit-hal and eventually machinekit-cnc
+
+[source,bash]
+----
+sudo apt install machinekit-hal-rt-preempt
+sudo apt install machinekit-cnc-rt-preempt
+----
+
+---
 
  This ends the install for console only mode operation
 
@@ -110,8 +112,12 @@ sudo apt install --reinstall libc6-dev
 
 To run with a hdmi display (DE10_Nano only) following extra steps are needed:
 
-* Set the following uboot variables:
-Either in a linux console
+* Set the following uboot variables: +
+bitimage +
+fdtfile +
+fpgaload_on_boot+
+
+Either in your linux console:
 
 [source,bash]
 ----
@@ -126,7 +132,7 @@ then reboot
 sudo reboot now
 ----
 
-Or
+Or:
 
 From the u-boot console:
 
@@ -139,7 +145,7 @@ From the u-boot console:
 ----
 
 NOTE 1:
-When using the display the fpga needs to be programmed by u-boot,
+When using the display the fpga needs to be programmed only by u-boot and not machinekit,
 
 * This happens before the linux kernel loads.
 Reprogramming the fpga after linux is booted will currently give problems,
@@ -165,7 +171,7 @@ BEFORE linux starts up so that the Framebuffer then can be picked up,
 Ensure that the right devicetree (the one with framebuffer enabled: socfpga_cyclone5_de10_nano_uio_fb_hd.dtb)
 and bitfile are loaded by u-boot:
 
-Current availabe bitfiles are:
+Current availabe HD hdmi bitfiles are:
 
 [source,bash]
 ----
