--- a/docs/getting-started/u-boot-mksocfpga-altera-initial.asciidoc
+++ b/docs/getting-started/u-boot-mksocfpga-altera-initial.asciidoc
@@ -110,7 +110,14 @@ sudo apt install machinekit-cnc-rt-preempt
 
 ---
 
-To run with a hdmi display (DE10_Nano only) following extra steps are needed:
+To run with a hdmi display 1024x768@60 (DE10_Nano only) following extra steps are needed:
+
+* install display manager:
+
+[source,bash]
+----
+sudo apt install lxqt
+----
 
 * Set the following uboot variables: +
 bitimage +
@@ -122,7 +129,7 @@ Either in your linux console:
 [source,bash]
 ----
 sudo fw_setenv bitimage '/lib/firmware/socfpga/DE10_Nano_FB_Cramps.3x24_cap_enc.rbf'
-sudo fw_setenv fdtfile 'socfpga_cyclone5_de10_nano_uio_fb_hd.dtb'
+sudo sudo fw_setenv fdtfile 'socfpga_cyclone5_de10_nano_uio_fb.dtb'
 sudo fw_setenv fpgaload_on_boot 1
 ----
 then reboot
@@ -171,7 +178,7 @@ BEFORE linux starts up so that the Framebuffer then can be picked up,
 Ensure that the right devicetree (the one with framebuffer enabled: socfpga_cyclone5_de10_nano_uio_fb_hd.dtb)
 and bitfile are loaded by u-boot:
 
-Current availabe HD hdmi bitfiles are:
+Current availabe 1024x768 hdmi bitfiles are:
 
 [source,bash]
 ----
@@ -183,6 +190,6 @@ machinekit@mksocfpga-nano-soc:~$ ls -l /lib/firmware/socfpga/DE10_Nano_FB_Cramps
 ----
 ---
 
- This ends the install for desktop HD hdmi display mode operation
+ This ends the install for desktop hdmi display mode operation
 
 ---
